@startuml
interface SeparationStrategy {
  +separate(waveform: vector<float>, sample_rate: int): pair<vector<float>, vector<float>>
}

class NeoSSNetStrategy {
  -session_: Ort::Session*
  +separate(waveform: vector<float>, sample_rate: int): pair<vector<float>, vector<float>>
}
SeparationStrategy <|.. NeoSSNetStrategy

abstract class PipelineFactory {
  +createStrategy(config: ModelConfig): unique_ptr<SeparationStrategy>
}
class NeoSSNetFactory {
  +createStrategy(config: ModelConfig): unique_ptr<SeparationStrategy>
}
PipelineFactory <|-- NeoSSNetFactory

interface ResultObserver {
  +onResultReady(recordingId: string, resultId: string)
}
class UIObserver
class AuditObserver
ResultObserver <|.. UIObserver
ResultObserver <|.. AuditObserver

class NotificationCenter {
  -observers_: vector<unique_ptr<ResultObserver>>
  +attach(observer)
  +notifyResultReady(recordingId, resultId)
}
NotificationCenter o--> ResultObserver

class SeparationService {
  -factory_: unique_ptr<PipelineFactory>
  -repository_: unique_ptr<ResultRepository>
  -notifier_: unique_ptr<NotificationCenter>
  +processRecording(recording: Recording): SeparationResult
}
SeparationService --> PipelineFactory
SeparationService --> NotificationCenter
@enduml
